# openai_rag_qa_jp

./: .env  .gitignore  AGENTS.md  CLAUDE.md  PYCHARM_FIX_NOW.md  README.md  README_API回数.md  a00_rag_data_evaluation.py  a01_load_non_qa_rag_data.py  a02_make_qa.py  a02_make_qa_backup.py  a02_make_qa_batch.py  a02_prepare.md  a03_qa_results.json  a03_rag_qa_coverage.py  a03_rag_qa_coverage_improved.py  a10_qa_optimized.py  a10_qa_optimized_hybrid_batch.py  a20_output_qa_csv.py  a30_qdrant_registration.py  a31_make_cloud_vector_store_vsid.py  a34_rag_search_cloud_vs.py  a40_show_qdrant_data.py  a41_qdrant_truncate.py  a42_qdrant_registration.py  a50_rag_search_local_qdrant.py  agents_jp.md  best_keywords.json  celery_config.py  claude_jp.md  config.yml  example.py  helper_api.py  helper_rag.py  helper_rag_qa.py  helper_st.py  keyword_extraction_results.json  make_qa.py  pyproject.toml  qa_extraction_result.json  (+14 more)
.claude_code/: config.yml
OUTPUT/: cc_news.txt  cc_news_jp.txt  japanese_text.txt  metadata_cc_news.json  metadata_japanese_text.json  metadata_livedoor.json  metadata_wikipedia_ja.json  preprocessed_cc_news.csv  preprocessed_japanese_text.csv
datasets/: cc_news_train_500_20251004_044338.csv  cc_news_train_500_20251004_044338_metadata.json  livedoor_news_train_7376_20251108_204416_metadata.json  range3_cc100_ja_train_1000_20251004_044159_metadata.json  range3_cc100_ja_train_1000_20251004_044421.csv  range3_cc100_ja_train_1000_20251004_044421_metadata.json  wikimedia_wikipedia_train_1000_20251004_044102_metadata.json
doc/: a00_rag_data_evaluation.md  a01_load_non_qa_rag_data.md  a02_make_qa.md  a03_rag_qa_coverage.md  a03_rag_qa_coverage_improved.md  a10_qa_optimized.md  a10_qa_optimized_hybrid_batch.md  a20_output_qa_csv.md  a31_make_cloud_vector_store_vsid.md  a34_rag_search_cloud_vs.md  a40_show_qdrant_data.md  a41_qdrant_truncate.md  a42_qdrant_registration.md  a50_rag_search_local_qdrant.md  code_list.md  comparison_qa_generation.md  coverage_enhancement_proposal.md  coverage_feature_comparison.md  example.md  helper_api.md  helper_rag.md  helper_rag_qa.md  howto_RAG.md  make_qa.md  regex_mecab.md  result.md  result_conclusion.md  tools_comparison.md
docker-compose/: docker-compose.yml  memo.txt
old_code/: PYCHARM_OPTIMIZATION.md  a01_load_set_rag_data.py  a02_set_vector_store_vsid.py  a03_rag_qa_coverage.py  a03_rag_qa_coverage_file.py  a03_rag_search_cloud_vs.py  a04_delete_vector_store.py  a10_best_selection.py  a10_evaluate_methods.py  a10_make_qa.py  a10_qa_optimized.py  a10_qa_optimized_hybrid.py  a10_smart_selection.py  a32_set_cloud_vector_store.py  a35_qdrant_truncate.py  a40_show_qdrant_data.py  a50_rag_search_local_qdrant.py  make_qa.py  qdrant_data_loader.py
qa_output/: coverage_cc_news_20251004_060950.json  coverage_cc_news_20251004_132415.json  coverage_cc_news_20251004_133025.json  coverage_cc_news_20251004_134638.json  coverage_cc_news_20251009_163107.json  coverage_cc_news_20251015_081232.json  coverage_japanese_text_20251004_102124.json  coverage_japanese_text_20251004_141159.json  coverage_japanese_text_20251009_162013.json  qa_pairs_cc_news_20251004_061903.csv  qa_pairs_cc_news_20251004_061903.json  qa_pairs_cc_news_20251004_090136.csv  qa_pairs_cc_news_20251004_090136.json  qa_pairs_cc_news_20251004_132415.csv  (+26 more)
(+26 files in other folders)
